# python_build_test_project

./: .gitignore  README.md  pyproject.toml
src/: requirements.txt
src/test_package/: main.py
src/test_package/depends/: cli.py  yaml_reader.py
